fix the spacing on the homepage for the case study and current reading sections

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -519,12 +519,11 @@ section.featured-case-study .featured-case-study-image img {
 }
 
 .featured-case-study-content {
-	padding: 3.2rem 1rem 3.8rem;
+	padding-inline: 0px 2rem;
+	padding: 0px 1rem;
 }
 
-.featured-case-study-content h2:first-of-type {
-	margin-block-start: 2rem;
-}
+
 
 .featured-case-study-content h3 {
 	margin-block-start: 0px;
@@ -544,8 +543,10 @@ section.featured-case-study .featured-case-study-image img {
 		border-radius: var(--border-radius) 0 0 var(--border-radius);
 	}
 	.featured-case-study-content {
-		padding-inline: 0px 2rem;
-	
+		padding: 3.2rem 1rem 3.8rem;
+	}
+	.featured-case-study-content h2:first-of-type {
+		margin-block-start: 2rem;
 	}
 }
 
